# snap-kcm

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  REUSE.toml
debian/: changelog  control  copyright  rules  watch
debian/source/: format
debian/upstream/: metadata
po/ar/: kcm_snap.po
po/bg/: kcm_snap.po
po/ca/: kcm_snap.po
po/ca@valencia/: kcm_snap.po
po/cs/: kcm_snap.po
po/de/: kcm_snap.po
po/es/: kcm_snap.po
po/eu/: kcm_snap.po
po/fi/: kcm_snap.po
po/fr/: kcm_snap.po
po/ga/: kcm_snap.po
po/gl/: kcm_snap.po
po/he/: kcm_snap.po
po/hi/: kcm_snap.po
po/ia/: kcm_snap.po
po/it/: kcm_snap.po
po/ka/: kcm_snap.po
po/ko/: kcm_snap.po
po/lt/: kcm_snap.po
po/lv/: kcm_snap.po
po/nl/: kcm_snap.po
po/nn/: kcm_snap.po
po/pl/: kcm_snap.po
po/pt_BR/: kcm_snap.po
po/sa/: kcm_snap.po
po/sk/: kcm_snap.po
po/sl/: kcm_snap.po
po/sv/: kcm_snap.po
po/tr/: kcm_snap.po
po/ug/: kcm_snap.po
po/uk/: kcm_snap.po
po/zh_CN/: kcm_snap.po
po/zh_TW/: kcm_snap.po
snap/: snapcraft.yaml
src/: CMakeLists.txt  kcm_snap.json  kcm_snap.json.license  kcmplug.cpp  kcmplug.h  kcmsnap.cpp  kcmsnap.h  snapbackend.cpp  snapbackend.h  snappermissions.cpp  snappermissions.h
src/ui/: ErrorDialog.qml  PermissionHeader.qml  PlugDelegate.qml  SnapDelegate.qml  main.qml  permissions.qml
